<resources>
    <string name="app_name">Discover Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="toolbar_title">Discover</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="dummy_overview">In 1926, Newt Scamander arrives at the Magical Congress of the United States of America with a magically expanded briefcase, which houses a number of dangerous creatures and their habitats. When the creatures escape from the briefcase, it sends the American wizarding authorities after Newt, and threatens to strain even further the state of magical and non-magical relations.</string>
    <string name="dummy_title">Fantastic Beasts and Where to Find Them</string>

    <string name="votes">VOTES</string>
    <string name="vote">VOTE</string>
    <string name="dummy_category_types">Family, Fantasy, Advanture</string>
    <string name="dummy_production">United Kingdom, USA</string>
    <string name="dummy_premiere">8 November 2016 (World)</string>
</resources>
